--- a/Step 1 to 5/Step 1.ipynb
+++ b/Step 1 to 5/Step 1.ipynb
@@ -61,7 +61,7 @@
    "id": "daaa8e8c",
    "metadata": {},
    "source": [
-    "<img src=\"https://github.com/IasonKotakis/Mattermost-Deployment-Digital-Ocean/blob/images/images/create%20droplet.png" alt=\"create droplet \" width=\"300px\" height=\"300px\">"
+    "<img src=\"https://github.com/IasonKotakis/Mattermost-Deployment-Digital-Ocean/blob/images/images/create%20droplet.png\" alt=\"create droplet \" width=\"300px\" height=\"300px\">"
    ]
   },
   {
